@@ -125,6 +125,11 @@ final class TcpTransceiver implements Transceiver
 			String s = "sent " + ret + " of " + buf.limit() + " bytes via tcp\n" + toString();
 			_logger.trace(_traceLevels.networkCat, s);
 		    }
+
+                    if(_stats != null)
+                    {
+                        _stats.bytesSent("tcp", ret);
+                    }
 		}
 		catch(java.io.InterruptedIOException ex)
 		{
@@ -216,11 +221,19 @@ final class TcpTransceiver implements Transceiver
 			continue;
 		    }
 		    
-		    if(ret > 0 && _traceLevels.network >= 3)
+		    if(ret > 0)
 		    {
-			String s = "received " + ret + " of " + remaining + " bytes via tcp\n" + toString();
-			_logger.trace(_traceLevels.networkCat, s);
-		    }
+                        if(_traceLevels.network >= 3)
+                        {
+                            String s = "received " + ret + " of " + remaining + " bytes via tcp\n" + toString();
+                            _logger.trace(_traceLevels.networkCat, s);
+                        }
+
+                        if(_stats != null)
+                        {
+                            _stats.bytesReceived("tcp", ret);
+                        }
+                    }
 		}
 		catch(java.io.InterruptedIOException ex)
 		{
@@ -270,6 +283,7 @@ final class TcpTransceiver implements Transceiver
         _fd = fd;
         _traceLevels = instance.traceLevels();
         _logger = instance.logger();
+        _stats = instance.stats();
         _desc = Network.fdToString(_fd);
     }
 
@@ -285,5 +299,6 @@ final class TcpTransceiver implements Transceiver
     private java.nio.channels.SocketChannel _fd;
     private TraceLevels _traceLevels;
     private Ice.Logger _logger;
+    private Ice.Stats _stats;
     private String _desc;
 }
